Added RAR's edits to singlephasedet

--- a/singlephasedet.tex
+++ b/singlephasedet.tex
@@ -1,7 +1,7 @@
 
 \subsection{LBNF detector}
 
-The far detector for the ELBNF collaboration will be a series of four 17 kt (10 kt) active (fiducial) volume  liquid argon time projection chambers instrumented with photon detection. It is planned that the first 10 kt detector will be ready for installation in the 2021 timeframe. One option for the TPC design is a wire plane based TPC with cold electronics readout. Designs of this style are are referred to as single-phase detectors as the charge generation, drift, and detection all occurs in the argon liquid phase. This style TPC has the advantage that there is no charge amplification before collection making a very precise charge measurement possible. To achieve ELBNF's goals, a detector much larger than ICARUS, the largest LAr TPC detector built to date, is needed. The LBNE experiment was developing a scalable far detector design shown in Figure \ref{fig:fardet-overview} that would scale-up LAr TPC technology by roughly a factor of 40 compared to the ICARUS T600 detector. To achieve this scale-up, a number of novel design elements need to be employed. A membrane cryostat typical for the liquefied natural gas industry will be used instead of a conventional evacuated cryostat. The wire planes or anode plane assemblies (APAs) will be factory-built as planar modules that are then installed into the cryostat. The modular nature of the APAs allow the size of the detector to be scaled up to at least 40 kt fiducial mass. Both the analog and digital electronics will be mounted on the wire planes inside the cryostat in order to reduce the electronic noise, to avoid transporting analog signals large distances, and to reduce the number of cables that penetrate the cryostat. The scintillation photon detectors will employ light collection paddles to reduce the required photo-cathode area. Many of the aspects of the design will be tested in a small scale prototype at Fermilab but given the very large scale of the detector elements a full-scale test is highly desirable. As the new ELBNF collaboration forms and organized a combined detector design team will emerge. Ideas from this new collaboration will modify the design presented here but this designs provides a concrete example of a possible future detector. 
+The far detector for the ELBNF collaboration will be a series of four liquid argon time projection chambers (TPC), each in a cryostat that holds a fiducial/active/total LAr mass of 10.0/13.3/16.9 kt. The TPCs will be instrumented with photon detection. It is planned that the first 10 kt detector will be ready for installation in the 2021 timeframe. One option for the TPC design is a wire plane based TPC with cold electronics readout. Designs of this style are are referred to as single-phase detectors as the charge generation, drift, and detection all occurs in the argon liquid phase. This style TPC has the advantage that there is no charge amplification before collection making a very precise charge measurement possible. To achieve ELBNF's goals, a detector much larger than ICARUS, the largest LAr TPC detector built to date, is needed. The LBNE experiment was developing a scalable far detector design shown in Figure \ref{fig:fardet-overview} that would scale-up LAr TPC technology by roughly a factor of 40 compared to the ICARUS T600 detector. To achieve this scale-up, a number of novel design elements need to be employed. A membrane cryostat typical for the liquefied natural gas industry will be used instead of a conventional evacuated cryostat. The wire planes or anode plane assemblies (APAs) will be factory-built as planar modules that are then installed into the cryostat. The modular nature of the APAs allow the size of the detector to be scaled up to at least 40 kt fiducial mass. Both the analog and digital electronics will be mounted on the wire planes inside the cryostat in order to reduce the electronic noise, to avoid transporting analog signals large distances, and to reduce the number of cables that penetrate the cryostat. The scintillation photon detectors will employ light collection paddles to reduce the required photo-cathode area. Many of the aspects of the design will be tested in a small scale prototype at Fermilab but given the very large scale of the detector elements a full-scale test is highly desirable. As the new ELBNF collaboration forms and organized a combined detector design team will emerge. Ideas from this new collaboration will modify the design presented here but this design provides a concrete example of a possible future detector. 
 
 
 
@@ -38,9 +38,9 @@ This sections presents the design details of a single-phase detector based on th
 
 This TPC consists of alternating anode plane assemblies (APAs) and cathode plane assemblies (CPAs), with field-cage panels enclosing the four open sides between the anode and cathode planes.  Figure  \ref{fig:CERNdet-overview} shows a sectioned view for the planned TPC inside the cryostat at CERN.  A uniform electric field is created in the volume between the anode and cathode planes. A charged particle traversing this volume leaves a trail of ionization. The electrons drift toward the anode plane, which is constructed from multiple layers of sense wires, inducing electric current signals in the front-end electronic circuits connected to the wires.
 
-To the extent possible TPC will be assembled from elements that are of the same size as those planned for the single phase far detector.  The primary exception to this is the length of the field cage panels which are 2.5m in this design, compared to 3.4m in the far detector. This is to reduce the impact of space charge on the prototype necessitated by the surface operation. The overall size of the TPC will be derived by the size and number of anode planes (APA).  It has been determined in order to perform the required physics, the TPC will have a 3 APA wide active volume.  The APAs will have an active (total) area 2.29 m (2.32 m) wide and 6.0 m (6.2 m) high . The combination of the three APAs will determine the overall TPC length to be 7.2 m. There will be a cathode plane (CPA) on either side of the APAs.  The overall width of the TPC will be determined by a combination of the drift distances along with the thickness of the APA, which is constructed of 76.2 x 101.6 mm stainless steel (SS) structural tubing.  The overall width of the TPC is 5.2 m.  Like the length of the TPC, the overall height will be determined by the height of the APA which is 6.3 m.  In summary the external TPC dimensions will be 7.2 m long x 5.2 m wide x 6.3 m high. Along with the APAs and CPAs, the TPC will include a field cage that surrounds the entire assembly.  This is a series of pultruded fiberglass I beams for the structural elements.  These I-beams will be tiled with large copper sided FR4 panels to create the field cage.  Each panel will be connected with a series of resistors.  The field cage will be connected to the CPAs through a capacitor assembly.
+To the extent possible the TPC will be assembled from elements that are of the same size as those planned for the single phase far detector.  The primary exception to this is the length of the field cage panels which are 2.5m in this design, compared to 3.4m in the far detector. This is because the drift distance between the APA and CPA is reduced to lessen the impact of space charge on the prototype necessitated by the surface operation. The overall size of the TPC will be derived by the size and number of anode planes (APA).  It has been determined in order to perform the required physics, the TPC will have a 3-APA wide active volume.  The APAs will have an active (total) area 2.29 m (2.32 m) wide and 6.0 m (6.2 m) high. The combination of the three APAs determines the overall TPC length to be 7.2 m. There will be a cathode plane (CPA) on either side of the APAs.  The overall width of the TPC will be determined by a combination of the drift distances along with the thickness of the APA, which is constructed of 76.2 x 101.6 mm stainless steel (SS) structural tubing.  The overall width of the TPC is 5.2 m.  Like the length of the TPC, the overall height will be determined by the height of the APA which is 6.3 m.  In summary the external TPC dimensions will be 7.2 m long x 5.2 m wide x 6.3 m high. Along with the APAs and CPAs, the TPC will include a field cage that surrounds the entire assembly.  This is a series of pultruded fiberglass I beams for the structural elements.  These I-beams will be tiled with large copper sided FR4 panels to create the field cage.  Each panel will be connected with a series of resistors.  The field cage will be connected to the CPAs through a capacitor assembly.
 
-All of this will be supported by rows of I-beams supported from a mechanical structure above the cryostat.  The hangers for these I-beams will pass through the insulated top cap.  There will be a series of feed thru flanges in the top cap of the cryostat to bring in and take out services for the TPC.  There will be a HV feed thru for each of the CPAs and one signal feed thru for each of the APAs.
+All of this will be supported by rows of I-beams supported from a mechanical structure above the cryostat.  The hangers for these I-beams will pass through the insulated top cap.  There will be a series of feed thru flanges in the top cap of the cryostat to bring in and take out services for the TPC.  There will be a HV feed thru for each of the CPA rows and one signal feed thru for each of the APAs.
 
 
 The minimum internal size of the cryostat is 9.5 m long, 7.3 m wide and 8.4 m high.  This is determined from size of the TPC.  At the bottom of the 
@@ -104,7 +104,7 @@ The installation sequence is planned to proceed as follows:
 \item Install the cryostat feedthroughs and dress cables inside the cryostat along the support beams.
 \item Install TPC panels:
    \begin{enumerate}
-   \item Install both CPA panels.  These will be installed from the floor of the cryostat.  Access to the top edge will be required by scaffolding.  
+   \item Install both pairs of CPA panels.  These will be installed from the floor of the cryostat.  Access to the top edge will be required by scaffolding.  
    \item Install and connect HV probe for each of the CPAs.
    \item Perform electrical tests on the connectivity of the probe to the CPAs.
    \item Install first end wall of vertical field cage at the non-access end of the cryostat.  These will be installed from the floor of the cryostat.  Scaffolding will be needed to install the supporting structure and then attach the panels to the structure.  
@@ -130,7 +130,9 @@ The installation sequence is planned to proceed as follows:
 In general, APA panels will be installed in order starting with the panel furthest from the hatch side of the cryostat and progressing back towards the hatch. The upper field cage will be installed in stages as the installation of APA and CPAs progresses.  After the APAs are attached to the support rods the electrical connections will be made to electrical cables that were already dressed to the support beams and electrical testing will begin. Periodic electrical testing will continue to assure that nothing gets  damaged during the additional work around the installed APAs.  
 
 The TPC installation will be performed in three stages, each in a separate location; the locations, or 
-zones. First, in the clean room vestibule, a crew will move the APA and CPA panels from storage racks, rotate to the vertical position and move them into the cryostat. Secondly, in the panel-staging area immediately below the equipment hatch of the cryostat, a second crew will transfer the lower panels from the crane to the staging platform, connect the upper and lower panels together, route cables to the top of stacked panels and finally transfer the stacked panels on to the rails within the cryostat. A third crew will reposition the movable scaffolding and use the scaffold to make the mechanical and electrical  connections at the top for each APA and CPA as they are moved into position.  
+zones. First, in the clean room vestibule, a crew will move the APA and CPA panels from storage racks, rotate to the vertical position and move them into the cryostat. %Secondly, in the panel-staging area immediately below the equipment hatch of the cryostat, 
+% CHECK THIS! I TRIED TO INTERPRET RUSS'S COMMENTS. -- ANNE
+A second crew will transfer the lower panels from the crane to the staging platform, where the crew inside the cryostat will connect the upper and lower panels together, route cables to the top of stacked panels and finally transfer the stacked panels on to the rails within the cryostat. A third crew will reposition the movable scaffolding and use the scaffold to make the mechanical and electrical  connections at the top for each APA and CPA as they are moved into position.  
 
 The requirements for alignment and survey of the TPC are under development. Since there are many cosmic rays in the surface detector and beam events, significant corrections can be made for any misalignment of the TPC. The current plan includes using a laser guide or optical transit and the adjustment features of the support rods for the TPC to align the top edges of the APAs in the TPC to be straight, level and parallel within a few mm. The alignment of the TPC in other dimensions will depend on the internal connecting features of the TPC.  The timing of the survey will depend on understanding when during the installation process the hanging TPC elements are in a dimensionally stable state. The required accuracy of the survey is not expected to be more precise than a few mm.  
 
