--- a/introduction.tex
+++ b/introduction.tex
@@ -1,49 +1,105 @@
-This document is a technical report for the Expression of Interest $<$reference$>$ submitted to the CERN SPSC in October 2014.  In this report, we detail the 
-proposal to test full-scale detector elements for a single-phase liquid argon (LAr) TPC based on the former LBNE design which is a potential viable technology 
-for use as a far detector for the experiment that will be at the Long Baseline Neutrino Facility (LBNF).  To mitigate the risks associated with extrapolating 
-small scale versions of the single-phase LAr TPC technology to a full-scale detector element, it is essential to benchmark the operation of a full-scale 
-detector elements in a particle beam.  The beam facility at the CERN Neutrino Platform (cite) provides an opportunity to perform this crucial test of the 
-proposed single-phase LAr TPC and inform the decision regarding phased implementation of the far detector for LBNF.
 
 
-\subsection{Physics goals of LBNF}
-An international collaboration is forming that will utilize a proposed 1.2 MW proton beam at FNAL to create a neutrino beam that will be directed at the 
-Homestake Mine in the USA.  The proposal is to place by the year 2024 $<$mention 2021 date for 10kton$>$ a 40 kton LAr TPC in the underground facility at 
-Homestake to observe the oscillation of $\nu_\mu \rightarrow \nu_e$ and $\bar{\nu}_\mu \rightarrow \bar{\nu}_e$ that occur near a neutrino energy of 3 GeV 
-and thereby make precision measurements of $\delta_{CP}$, $\delta_{13}$, and $\delta_{23}$ and determining the neutrino mass hierarchy.  In order to make such 
-precise measurements, the detector will need to accurately identity and measure the energy of the particles produced in the neutrino interaction with Argon 
-which will range from a few GeV to hundreds of MeV.       
 
 
-\subsection{Single-phase LAr TPC Prototype}
-The LBNE-style single-phase LAr TPC is design to be scalable using module units that consist of a factory-built anode plane, a cathode a plane, and a field 
-cage with the anode plane assemblies measuring 6.0m  (h)  $\times$  2.3m  (w) $\times$  0.09m (d) and a drift length of 2.5m.  The electronics will be mounted 
-in the cryostat on the wire planes to reduce the number of cables that penetrate the cryostat and optimize the electronic signal to noise.  Event timing will 
-be determined through the use of scintillation photon detectors that will use light collection paddles.  With this modular design as shown in $<$insert figure 
-of LBNE detector to shown modular design$>$ , it will be possible to achieve the goal of 40 kton detector for the LBNF far site.
+The preponderance of matter over antimatter in the early Universe, the dynamics of the supernova bursts that produced the heavy elements necessary for life and whether protons eventually decay - these mysteries at the forefront of particle physics and astrophysics are key to understanding the early evolution of our Universe, its current state and its eventual fate. The Experiment at the Long-Baseline Neutrino Facility (ELBNF) represents an extensively developed plan for a world-class experiment dedicated to addressing these questions.
 
-Some features of this single-phase design will be tested using smaller scale prototypes such as the ongoing tests with a 35ton unit at Fermilab and the 5ton 
-CAPTAIN LAr TPC.  However, none of these smaller prototypes uses full scale detector elements or are large enough to fully contain particles.  Considering that 
-the detector at the LBNF far site will be about a factor of 50 larger in scale than the ICARUS detector which is currently the largest LAr TPC detector built 
-to date, it is essential to validate the full-scale detector elements in a particle beam at the CERN Neutrino Platform.    
+Experiments carried out over the past half century have revealed that neutrinos are found in three states, or flavors, and can transform from one flavor into another. These results indicate that each neutrino flavor state is a mixture of three different nonzero mass states, and to date offer the most compelling evidence for physics beyond the Standard Model. In a single experiment, ELBNF will enable a broad exploration of the three-flavor model of neutrino physics with unprecedented detail. Chief among its potential discoveries is that of matter-antimatter asymmetries (through the mechanism of charge-parity violation) in neutrino flavor mixing - a step toward unraveling the mystery of matter generation in the early Universe. Independently, determination of the unknown neutrino mass ordering and precise measurement of neutrino mixing parameters by ELBNF may reveal new fundamental symmetries of Nature.
 
-In order to fully contain particles within the energy range of interest and provide space for detector services, the cryostat will need to have a minimum inner 
-dimensions of 8.4m (h) $\times$ 7.3m (w) $\times$ 9.5m (d).  It is anticipated that the CERN Neutrino Platform will facilitate the design and construction of 
-the cryostat and that this effort will common area that will motivate collaboration with the WA105 team.
+Grand Unified Theories, which attempt to describe the unification of the known forces, predict rates for proton decay that cover a range directly accessible with the next generation of large underground detectors such as the ELBNF detector. The experiment's sensitivity to key proton decay channels will offer unique opportunities for the ground-breaking discovery of this phenomenon.
 
-\subsection{Goals for the prototype run}
-The goals of the prototype run include:
-\begin{itemize}
-\item Use of particle beam to assess
- \subitem tracking and calorimetric response
- \subitem reconstruction algorithm
- \subitem Monte Carlo simulation
- \subitem Secondary hadron interactions in detector
-\item Verifying argon contamination mitigation
-\item Full-scale structural test under LAr cryogenic conditions
-\item Verfication of TPC Electrics under LAr cryogenic conditions
-\item Study light levels of the photon detection system
-\item Developing installation procedures for full-scale electronics
+Neutrinos emitted in the first few seconds of a core-collapse supernova carry with them the potential for great insight into the evolution of the Universe. ELBNF's capability to collect and analyze this high-statistics neutrino signal from a supernova within our galaxy would provide a rare opportunity to peer inside a newly-formed neutron star and potentially witness the birth of a black hole.
 
-\end{itemize}
+To achieve its goals, ELBNF is centered around three central components: (1) a new, high-intensity neutrino source generated from a megawatt-class proton accelerator at Fermi National Accelerator Laboratory (Fermilab), (2) a fine-grained near neutrino detector installed just downstream of the source, and (3) a massive liquid argon (LAr) time-projection chamber (TPC) deployed as a far detector deep underground at the Sanford Underground Research Facility (SURF). This facility, located at the site of the former Homestake Mine in Lead, South Dakota, is $\sim$1,300 km from the neutrino source at Fermilab - a distance (baseline) that delivers optimal sensitivity to neutrino charge-parity symmetry violation and mass ordering effects. This ambitious yet cost-effective design incorporates scalability and flexibility and can accommodate a variety of upgrades and contributions.
+
+ELBNF plans to place modular LAr TPCs with a combined total fiducal mass of at least  40 kton in the underground facility at Homestake and into the neutrino beam.
+The first 10~kton LAr TPC module is planned to be constructed underground on the time scale of 2021.
+
+With its exceptional combination of experimental configuration, technical capabilities, and potential for transformative discoveries, ELBNF promises to be a vital facility for the field of particle physics worldwide, providing physicists from institutions around the globe with opportunities to collaborate in a twenty to thirty year program of exciting science.
+
+
+
+\subsection{Key physics goals of ELBNF}
+
+
+The primary goal of ELBNF  is to measure the appearance of electron neutrinos in a beam of muon neutrinos and 
+and the appearance of electron anti-neutrinos in a beam of muon anti-neutrinos, each
+ over the 1300~km baseline of the experiment. Precise measurement of thisphenomenon would allow for determination of the relative masses and mass ordering of the threeknown neutrinos. Measurement of these neutrino oscillation channels also allow to constrain or measure the
+CP violation phase, $\delta_{CP}$ in the neutrino sector, which is possibly connected to the dominance of matterover antimatter in the universe.
+
+For a baseline of 1300~km the first maximum of the oscillation probability occurs in the 2 - 3~GeV energy range with additional  
+oscillation maxima at lower energies. Hence the high intensity neutrino flux must be peaked in this energy range. Coverage of the 
+sub GeV energy range is desirable to potentially map out the second maximum in the oscillation probability.
+It is this key physics which dictates the neutrino energy range and thereby the energy range of charged particles which result from neutrino 
+interactions in the ELBNF detectors. 
+
+
+\subsection{Single-phase LAr TPC Design}
+
+The basic components of the liquid argon detector include a cryostat and associated cryogenic system. A time projection chamber (TPC) and readout electronics are housed in the cryostat.
+
+The cryostat contains the liquid argon target material and the cryogenic system keeps the liquid argon at a cryogenic temperature of 89K, and maintains the required purity through pump and filter system. A uniform electric field is created within the TPC volume between cathode planes and anode wire planes. Charged particles passing through the TPC release ionization electrons that drift to the anode wires. The bias voltage is set on the anode plane wires so that ionization electrons drift between the first several (induction) planes and is collected on the last (collection) plane. Readout electronics amplify and continuously digitize the induced waveforms on the sensing wires at several MHz, and transmit these data to the DAQ system for analysis. The wire planes are oriented at different angles allowing a 3D reconstruction of the particle trajectories. In addition to these basic components, a photon detection system is also included in the design to enable the study of proton decay and be sensitive to galactic supernova neutrinos.
+
+The LAr detector design is characterized by a modular approach in which the LAr volume in the cryostat is instrumented with a number of identical anode wire plane assemblies (APA) and associated cathode plane assemblies (CPA). To a large extent, scaling from detector volumes containing from a few to several hundred of such modules should be straightforward with small and predictable risk.
+
+
+\subsection{Goals for the prototype detector and beam test}
+
+The physics sensitivity of ELBNF has been estimated based on detector performance characteristics published in the literature, simulation based estimates
+as well as a variety of assumptions about the anticipated performance of the future detector and event reconstruction and particle identification algorithms.
+The proposed single phase LAr prototype detector and CERN beam test aim to replace these assumptions with measurements for the full scale ELBNF detector 
+components and the presently available algorithms. Thereby the measurements will allow to enhance the accuracy and reliability of the ELBNF physics sensitivity 
+projections. The beam measurements will serve as a calibration data set to tune the Monte Carlo simulations and serve as a reference data set for measurements of the 
+future ELBNF detector. In addition, the measurement program aims to evaluate and benchmark the performance of the detector and its individual components.
+This will allow to identify potentially problematic components and lead to future improvements and optimizations of the detector design.
+
+In order to make such precise measurements, the detector will need to accurately identify and measure the energy of the particles produced in the neutrino interaction with Argon which will range from hundreds of MeV to several GeV.
+To mitigate the risks associated with extrapolating small scale versions of the single-phase LAr TPC technology to a full-scale detector element, it is essential to benchmark the operation of a full-scale detector elements in a well characterized charged particle beam.  
+
+More specifically, the goals of the prototype detector and beam test measurements include the
+the use of a charged particle beam to:
+\begin{enumerate}
+\item measure the detector calorimetric response for
+\begin{enumerate}
+	\item hadronic showers
+	\item electromagnetic showers
+\end{enumerate}
+\item study e/$\gamma$-separation capabilities
+\item measure event reconstruction efficiencies as function of energy and particle type based on experimental data
+\item measure performance of particle identification algorithms as function of energy and for realistic detector conditions
+\item assess single particle track calibration and reconstruction
+%		-- characterize performance of algorithms
+\item validate accuracy of Monte Carlo simulations for relevant energy ranges as well as directions
+
+%  \item secondary hadron interactions in detector
+\item study other topics with the collected data sets
+ \begin{enumerate}
+    \item pion interaction kinematics and cross sections
+    \item kaon interaction cross section to characterize proton decay backgrounds ...
+    \item muon capture for charge identification
+ \end{enumerate}
+\end{enumerate}
+
+For the detector performance characterization a well defined charged particle test beam will 
+enable the following detector performance measurements:
+\begin{enumerate}
+ \item characterize performance of full scale TPC module
+ \item verify functionality of cold TPC electronics under LAr cryogenic conditions
+ \item perform full-scale structural test under LAr cryogenic conditions
+ \item study performance of the photon detection system
+ \item verify argon contamination levels and associated mitigation procedures
+ \item develop and test installation procedures for full-scale detector components
+\end{enumerate}
+
+
+The CERN charged particle beam lines provide an opportunity to perform this crucial test of the 
+proposed single-phase LAr TPC and thereby inform the decision regarding the far detector design and layout for ELBNF.
+In order to be of greatest value to this decision making process results should be available as soon as possible.
+
+This technical document describes the motivation and technical details for an initial  measurement program that we propose to be executed by mid 2018, 
+that is {\it before} the anticipated LHC long shutdown. The estimated required beam time amounts to $\sim$ XX weeks of data collection. 
+%
+Additional follow-up measurements with potentially modified detector components form a potential extension to the proposed program.
+
+
 
