total page estimate in red

--- a/CERNproto.tex
+++ b/CERNproto.tex
@@ -56,7 +56,7 @@ insert abstract here
 
 \newpage
 
-\section{Introduction [$\sim$5 pages; {\color{red} Thomas/Greg/Bob Wilson}]}
+\section{Introduction [$\sim$5 pages; {\color{red} Thomas/Greg/B.Wilson}]}
 	\input{introduction}
 %	\input{../150212_introduction_Greg}
 
@@ -78,7 +78,7 @@ insert abstract here
 	\input{testbeamreq}
 
 
-\section{Computing requirements, data handling and software  [$\sim$3 pages; {\color{red} Maxim Potekhin/Craig Tull }]}
+\section{Computing requirements, data handling and software  [$\sim$3 pages; {\color{red} Maxim/Craig}]}
 	\input{computing}
 
 \section{CERN neutrino platform test environment [5 pages; {\color{red} David/Jack/Cheng-Ju/Thomas}]}
@@ -94,5 +94,6 @@ insert abstract here
 
 \input{bibliography}
 
-$\rightarrow$ total estimated page count: $\sim$60 pages
+{\color{red}
+$\rightarrow$ total estimated page count: $\sim$60 pages}
 \end{document}
