change section header

--- a/introduction.tex
+++ b/introduction.tex
@@ -24,8 +24,11 @@ With its exceptional combination of experimental configuration, technical capabi
 
 The primary goal of ELBNF  is to measure the appearance of electron neutrinos in a beam of muon neutrinos and 
 and the appearance of electron anti-neutrinos in a beam of muon anti-neutrinos, each
- over the 1300~km baseline of the experiment. Precise measurement of thisphenomenon would allow for determination of the relative masses and mass ordering of the threeknown neutrinos. Measurement of these neutrino oscillation channels also allow to constrain or measure the
-CP violation phase, $\delta_{CP}$ in the neutrino sector, which is possibly connected to the dominance of matterover antimatter in the universe.
+ over the 1300~km baseline of the experiment. Precise measurement of this
+phenomenon would allow for determination of the relative masses and mass ordering of the three
+known neutrinos. Measurement of these neutrino oscillation channels also allow to constrain or measure the
+CP violation phase, $\delta_{CP}$ in the neutrino sector, which is possibly connected to the dominance of matter
+over antimatter in the universe.
 
 For a baseline of 1300~km the first maximum of the oscillation probability occurs in the 2 - 3~GeV energy range with additional  
 oscillation maxima at lower energies. Hence the high intensity neutrino flux must be peaked in this energy range. Coverage of the 
@@ -34,7 +37,7 @@ It is this key physics which dictates the neutrino energy range and thereby the 
 interactions in the ELBNF detectors. 
 
 
-\subsection{Single-phase LAr TPC Design}
+\subsection{Single-phase LAr detector}
 
 The basic components of the liquid argon detector include a cryostat and associated cryogenic system. A time projection chamber (TPC) and readout electronics are housed in the cryostat.
 
